Fix horizontal scrollbar issue for older browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body{
     background:#282828;
     color:#FFF;
     font-weight:500;
+    overflow-x:hidden;
 }
 
 body, input, button{ font-family:var(--roboto) }
